[package]
name = "recon"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0"
sqlx = { version = "0.6.2", features = [
  "chrono",
  "sqlite",
  "json",
  "offline",
  "runtime-tokio-native-tls",
] }
sqlx-crud = { version = "*", default-features = false, features = [
  "runtime-tokio-native-tls",
] }


dotenv = "0.15.0"
tokio = { version = "1.20.0", features = ["macros"] }
chrono = "0.4.22"

unix_mode = "0.1.3"
content_inspector = "0.2.4"

clap = { version = "4.0.10", features = ["cargo"] }

crc32fast = "1.3.2"
sha2 = "0.10.6"
md-5 = "0.10.5"
simhash = "0.2.0"
yara = { version = "0.16.1", features = ["vendored", "serde"] }

serde = "1.0.145"
ignore = "0.4.18"
serde_derive = "1.0.145"
serde_yaml = "0.9.13"
serde_json = "1.0.85"
regex = "1.6.0"
serde_regex = "1.1.0"
tabled = "0.9.0"
csv = "1.1.6"
lazy_static = "1.4.0"

tracing = "^0.1.34"
tracing-tree = { version = "0.2.1" }
tracing-subscriber = { version = "^0.3.11", features = ["env-filter"] }

indicatif = "0.17.1"


[target.'cfg(unix)'.dependencies]
users = "0.11.*"

[dev-dependencies]
trycmd = "*"
